demo-itst/apps/online-apps/base/deployment-pay-create.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-create
  labels:
    app: pay-create
    app.openshift.io/runtime: camel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pay-create
  template:
    metadata:
      labels:
        app: pay-create
    spec:
      containers:
        - name: pay-create
          image: quay.io/rhn_consulting_kemori/pay-create:1.0.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8282
              protocol: TCP
