demo-itst/apps/online-apps/base/deployment-shopping-entry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-entry
  labels:
    app: shopping-entry
    app.openshift.io/runtime: camel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-entry
  template:
    metadata:
      labels:
        app: shopping-entry
    spec:
      containers:
        - name: shopping-entry
          image: quay.io/rhn_consulting_kemori/shopping-entry:1.0.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8280
              protocol: TCP
