demo-itst/apps/online-apps/base/deployment-yakujo-henko.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yakujo-henko
  labels:
    app: yakujo-henko
    app.openshift.io/runtime: camel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yakujo-henko
  template:
    metadata:
      labels:
        app: yakujo-henko
    spec:
      containers:
        - name: yakujo-henko
          image: quay.io/rhn_consulting_kemori/yakujo-henko:1.0.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8284
              protocol: TCP
