demo-itst/apps/online-apps/base/service-demo-apl-viewer.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-apl-viewer
  labels:
    app: demo-apl-viewer
spec:
  type: ClusterIP
  ports:
    - name: 8288-tcp
      protocol: TCP
      port: 8288
      targetPort: 8288
  sessionAffinity: None
  selector:
    app: demo-apl-viewer
