demo-itst/apps/online-apps/base/service-pay-create.yaml
apiVersion: v1
kind: Service
metadata:
  name: pay-create
  labels:
    app: pay-create
spec:
  type: ClusterIP
  ports:
    - name: 8282-tcp
      protocol: TCP
      port: 8282
      targetPort: 8282
  sessionAffinity: None
  selector:
    app: pay-create
