demo-itst/apps/online-apps/base/service-yakujo-henko.yaml
apiVersion: v1
kind: Service
metadata:
  name: yakujo-henko
  labels:
    app: yakujo-henko
spec:
  type: ClusterIP
  ports:
    - name: 8284-tcp
      protocol: TCP
      port: 8284
      targetPort: 8284
  sessionAffinity: None
  selector:
    app: yakujo-henko
