demo-itst/apps/online-apps/base/route-data-setup.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: data-setup
  labels:
    app: data-setup
spec:
  to:
    kind: Service
    name: data-setup
    weight: 100
  port:
    targetPort: 8090-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
