demo-itst/apps/online-apps/base/route-demo-apl-viewer.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-apl-viewer
  labels:
    app: demo-apl-viewer
spec:
  to:
    kind: Service
    name: demo-apl-viewer
    weight: 100
  port:
    targetPort: 8288-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
